Java 12 and 13 examples added